Prevent scrollbars on issue attributes.
git-svn-id: http://svn.redmine.org/redmine/trunk@16039 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -458,7 +458,8 @@ div.issue span.private, div.journal span.private { position:relative; bottom: 2p
 div.issue .next-prev-links {color:#999;}
 div.issue .attributes {margin-top: 2em;}
 div.issue .attribute {padding-left:180px; clear:left; min-height: 1.8em;}
-div.issue .attribute .label {width: 170px; margin-left:-180px; font-weight:bold; float:left;}
+div.issue .attribute .label {width: 170px; margin-left:-180px; font-weight:bold; float:left; overflow:hidden; text-overflow: ellipsis;}
+div.issue .attribute .value {overflow:hidden; text-overflow: ellipsis;}
 div.issue.overdue .due-date .value { color: #c22; }
 
 #issue_tree table.issues, #relations table.issues { border: 0; }
